# jetlag

./: .gitignore  AUDIT.md  README.md  pyproject.toml  reference_data.kmz
.github/workflows/: deploy.yml
data/: seattle_attractions.geojson  seattle_attractions.meta.json
jetlag/: __init__.py  attractions.py  data.py  viz.py
notebooks/: seattle_attractions.ipynb  seattle_strategy.ipynb  seattle_strategy_kmz.ipynb
scripts/: export_for_web.py
web/: README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
web/public/data/: transit_routes.geojson  transit_stops.geojson  transit_walkshed.geojson
